examples/invalid/not_declared/chord_type3.vbr
moderato() {
    a: A|
    |>(a.a)|
}